UML schema + changes to Project