@@ -1,28 +1,27 @@
 package com.example.mangobank.service.impl;
 
 import com.example.mangobank.model.entity.Account;
-import com.example.mangobank.repository.AccountsRepository;
+import com.example.mangobank.repository.AccountRepository;
 import com.example.mangobank.service.AccountService;
 import org.springframework.stereotype.Service;
 
 import javax.persistence.EntityExistsException;
 import javax.persistence.EntityNotFoundException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class AccountServiceImpl implements AccountService {
 
-    private final AccountsRepository accountsRepository;
+    private final AccountRepository accountRepository;
 
-    public AccountServiceImpl(AccountsRepository accountsRepository) {
-        this.accountsRepository = accountsRepository;
+    public AccountServiceImpl(AccountRepository accountRepository) {
+        this.accountRepository = accountRepository;
     }
 
     @Override
     public void addAccount(Account account) {
-        if (findAccountByIban(account.getIban()) == false) {
-            accountsRepository.save(account);
+        if (!findAccountByIban(account.getIban())) {
+            accountRepository.save(account);
         } else {
             throw new EntityExistsException("Account with such IBAN already exists");
         }
@@ -30,8 +29,8 @@ public class AccountServiceImpl implements AccountService {
 
     @Override
     public void deleteAccount(Account account) {
-        if (findAccountByIban(account.getIban()) == true){
-            accountsRepository.delete(account);
+        if (findAccountByIban(account.getIban())){
+            accountRepository.delete(account);
         } else {
             throw new EntityNotFoundException("No such account");
         }
@@ -39,9 +38,9 @@ public class AccountServiceImpl implements AccountService {
 
     @Override
     public void deleteAccountById(Long id) {
-        var account = accountsRepository.findById(id);
+        var account = accountRepository.findById(id);
         if (account.isPresent()){
-            accountsRepository.delete(account.get());
+            accountRepository.delete(account.get());
         } else {
             throw new EntityNotFoundException("No account with such ID");
         }
@@ -49,27 +48,24 @@ public class AccountServiceImpl implements AccountService {
 
     @Override
     public boolean findAccountByIban(String iban) {
-        List<Account> finalList = accountsRepository.findAll().stream()
-                .filter(a -> a.getIban().trim().equals(iban.trim())).collect(Collectors.toList());
-        if (finalList.isEmpty()) {
-            return false;
-        }
-        return true;
+        List<Account> finalList = accountRepository.findAll().stream()
+                .filter(a -> a.getIban().trim().equals(iban.trim())).toList();
+        return !finalList.isEmpty();
     }
 
     @Override
     public Account updateAccount(Account account) {
         Long id = account.getId();
-        if (findAccountByIban(account.getIban()) == true){
-         var dbAccount = accountsRepository.findById(id).get();
+        if (findAccountByIban(account.getIban())){
+         var dbAccount = accountRepository.findById(id).get();
          dbAccount.setIban(account.getIban());
          dbAccount.setBalance(account.getBalance());
          dbAccount.setToAccountPayment(account.getToAccountPayment());
          dbAccount.setFromAccountPayment(account.getFromAccountPayment());
          dbAccount.setIban(account.getIban());
-         dbAccount.setClient(account.getClient());
+         dbAccount.setUser(account.getUser());
          dbAccount.setCardNumber(account.getCardNumber());
-         return accountsRepository.save(dbAccount);
+         return accountRepository.save(dbAccount);
         } else {
             throw new EntityNotFoundException("No such account");
         }
@@ -77,6 +73,6 @@ public class AccountServiceImpl implements AccountService {
 
     @Override
     public List<Account> getAll() {
-        return accountsRepository.findAll();
+        return accountRepository.findAll();
     }
 }
